fix: make Plyr player 100% height to fix black bar gap at bottom

--- a/wedding-template-01/style.css
+++ b/wedding-template-01/style.css
@@ -490,6 +490,11 @@ section:not(#hero) {
     border: 8px solid white;
 }
 
+.plyr {
+    height: 100% !important;
+    width: 100% !important;
+}
+
 .video-container iframe {
     position: absolute;
     top: 0;
